--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "pm2-runtime start config/ecosystem.config.js --env production"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
